--- a/package.json
+++ b/package.json
@@ -20,26 +20,25 @@
   },
   "homepage": "https://cobrowse.io",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.3",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-register": "^6.26.0",
-    "eslint": "^4.13.1",
-    "eslint-config-airbnb-base": "^13.0.0",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-import": "^2.8.0",
-    "karma": "^2.0.4",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/register": "^7.0.0",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.5",
+    "ecs-deploy-utils": "0.0.7",
+    "eslint": "^5.12.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-import": "^2.14.0",
+    "karma": "^3.1.4",
     "karma-chrome-launcher": "^2.2.0",
     "karma-mocha": "^1.3.0",
-    "karma-webpack": "^3.0.0",
+    "karma-webpack": "^3.0.5",
     "mocha": "*",
     "pre-commit": "^1.2.2",
-    "webpack": "^4.15.1",
-    "webpack-command": "^0.4.0"
+    "webpack": "^4.28.4",
+    "webpack-auto-inject-version": "^1.2.2"
   },
   "dependencies": {
     "fast-deep-equal": "^2.0.1"
