--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "babel src --out-dir dist",
     "prepublishOnly": "npm run build",
     "lint": "eslint --ext .js .",
-    "test": "npm run-script lint && karma start --single-run --browsers ChromeHeadless karma.conf.js"
+    "test": "npm run-script lint && karma start --single-run --browsers ChromeHeadless karma.conf.js",
+    "test-dev": "npm run-script lint && karma start --browsers Chrome karma.conf.js"
   },
   "repository": {
     "type": "git",
@@ -37,6 +38,7 @@
     "karma-webpack": "^3.0.5",
     "mocha": "*",
     "pre-commit": "^1.2.2",
+    "should": "^13.2.3",
     "webpack": "^4.28.4",
     "webpack-auto-inject-version": "^1.2.2"
   },
