--- a/package.json
+++ b/package.json
@@ -21,28 +21,31 @@
   },
   "homepage": "https://cobrowse.io",
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.2.3",
-    "@babel/register": "^7.0.0",
-    "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.5",
-    "ecs-deploy-utils": "0.0.7",
+    "@babel/cli": "^7.6.4",
+    "@babel/core": "^7.6.4",
+    "@babel/preset-env": "^7.6.3",
+    "@babel/register": "^7.6.2",
+    "babel-eslint": "^10.0.3",
+    "babel-loader": "^8.0.6",
+    "ecs-deploy-utils": "^1.0.0",
     "eslint": "^5.12.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-loader": "^2.1.1",
     "eslint-plugin-import": "^2.14.0",
-    "karma": "^3.1.4",
-    "karma-chrome-launcher": "^2.2.0",
+    "karma": "^4.4.1",
+    "karma-chrome-launcher": "^3.1.0",
     "karma-mocha": "^1.3.0",
-    "karma-webpack": "^3.0.5",
+    "karma-webpack": "^4.0.2",
     "mocha": "*",
     "pre-commit": "^1.2.2",
     "should": "^13.2.3",
-    "webpack": "^4.28.4",
+    "webpack": "^4.41.2",
     "webpack-auto-inject-version": "^1.2.2"
   },
   "pre-commit": [
     "build"
-  ]
+  ],
+  "dependencies": {
+    "core-js": "^3.3.5"
+  }
 }
