--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "babel src --out-dir dist",
     "prepublishOnly": "npm run build",
     "lint": "eslint --ext .js .",
-    "test": "npm run-script lint && karma start --single-run --browsers ChromeHeadless karma.conf.js",
+    "test": "karma start --single-run --browsers ChromeHeadless karma.conf.js",
     "test-dev": "npm run-script lint && karma start --browsers Chrome karma.conf.js"
   },
   "repository": {
@@ -21,31 +21,25 @@
   },
   "homepage": "https://cobrowse.io",
   "devDependencies": {
-    "@babel/cli": "^7.6.4",
-    "@babel/core": "^7.6.4",
-    "@babel/preset-env": "^7.6.3",
-    "@babel/register": "^7.6.2",
-    "babel-eslint": "^10.0.3",
-    "babel-loader": "^8.0.6",
-    "ecs-deploy-utils": "^1.0.0",
-    "eslint": "^5.12.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-loader": "^2.1.1",
-    "eslint-plugin-import": "^2.14.0",
-    "karma": "^4.4.1",
+    "@babel/cli": "^7.12.16",
+    "@babel/core": "^7.12.16",
+    "@babel/preset-env": "^7.12.16",
+    "@babel/register": "^7.12.13",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.2.2",
+    "karma": "^6.1.1",
     "karma-chrome-launcher": "^3.1.0",
-    "karma-mocha": "^1.3.0",
-    "karma-webpack": "^4.0.2",
-    "mocha": "*",
+    "karma-mocha": "^2.0.1",
+    "karma-webpack": "^5.0.0",
+    "mocha": "^8.3.0",
     "pre-commit": "^1.2.2",
     "should": "^13.2.3",
-    "webpack": "^4.41.2",
-    "webpack-auto-inject-version": "^1.2.2"
+    "webpack": "^5.22.0"
   },
   "pre-commit": [
     "build"
   ],
   "dependencies": {
-    "core-js": "^3.3.5"
+    "core-js": "^3.8.3"
   }
 }
