--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
   },
   "homepage": "https://cobrowse.io",
   "devDependencies": {
-    "@babel/cli": "^7.13.16",
-    "@babel/core": "^7.14.0",
-    "@babel/preset-env": "^7.14.1",
+    "@babel/cli": "^7.14.3",
+    "@babel/core": "^7.14.3",
+    "@babel/preset-env": "^7.14.4",
     "@babel/register": "^7.13.16",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
@@ -34,14 +34,14 @@
     "mocha": "^8.4.0",
     "pre-commit": "^1.2.2",
     "should": "^13.2.3",
-    "webpack": "^5.37.0"
+    "standard": "^16.0.3",
+    "webpack": "^5.38.1"
   },
   "pre-commit": [
     "build"
   ],
   "dependencies": {
-    "core-js": "^3.12.1",
-    "standard": "^16.0.3"
+    "core-js": "^3.13.1"
   },
   "standard": {
     "env": [
